@@ -128,6 +128,22 @@ class OrderBy(object):
         return '<OrderBy {0}, {1}>'.format(self.field, self.direction)
 
 
+class GroupBy(object):
+    """Represents a "group by" in a SQL query expression."""
+
+    def __init__(self, field):
+        """Instantiates this object with the specified attributes.
+
+        `field` is the name of the field by which to group the result set.
+
+        """
+        self.field = field
+
+    def __repr__(self):
+        """Returns a string representation of this object."""
+        return '<GroupBy {0}>'.format(self.field)
+
+
 class Filter(object):
     """Represents a filter to apply to a SQL query.
 
@@ -204,7 +220,7 @@ class SearchParameters(object):
     """
 
     def __init__(self, filters=None, limit=None, offset=None, order_by=None,
-                 junction=None):
+                 group_by=None, junction=None):
         """Instantiates this object with the specified attributes.
 
         `filters` is a list of :class:`Filter` objects, representing filters to
@@ -217,7 +233,11 @@ class SearchParameters(object):
         skip in the result set.
 
         `order_by` is a list of :class:`OrderBy` objects, representing the
-        ordering directives to apply to the result set which matches the
+        ordering directives to apply to the result set that matches the
+        search.
+
+        `group_by` is a list of :class:`GroupBy` objects, representing the
+        grouping directives to apply to the result set that matches the
         search.
 
         `junction` is either :func:`sqlalchemy.or_` or :func:`sqlalchemy.and_`
@@ -230,14 +250,16 @@ class SearchParameters(object):
         self.limit = limit
         self.offset = offset
         self.order_by = order_by or []
+        self.group_by = group_by or []
         self.junction = junction or AND
 
     def __repr__(self):
         """Returns a string representation of the search parameters."""
         template = ('<SearchParameters filters={0}, order_by={1}, limit={2},'
-                    ' offset={3}, junction={4}>')
+                    ' group_by={3}, offset={4}, junction={5}>')
         return template.format(self.filters, self.order_by, self.limit,
-                               self.offset, self.junction.__name__)
+                               self.group_by, self.offset,
+                               self.junction.__name__)
 
     @staticmethod
     def from_dictionary(dictionary):
@@ -248,19 +270,26 @@ class SearchParameters(object):
 
             {
               'filters': [{'name': 'age', 'op': 'lt', 'val': 20}, ...],
-              'order_by': [{'field': 'age', 'direction': 'desc'}, ...]
+              'order_by': [{'field': 'name', 'direction': 'desc'}, ...]
+              'group_by': [{'field': 'age'}, ...]
               'limit': 10,
               'offset': 3,
               'disjunction': True
             }
 
-        where ``dictionary['filters']`` is the list of :class:`Filter` objects
-        (in dictionary form), ``dictionary['order_by']`` is the list of
-        :class:`OrderBy` objects (in dictionary form), ``dictionary['limit']``
-        is the maximum number of matching entries to return,
-        ``dictionary['offset']`` is the number of initial entries to skip in
-        the matching result set, and ``dictionary['disjunction']`` is whether
-        the filters should be joined as a disjunction or conjunction.
+        where
+        - ``dictionary['filters']`` is the list of :class:`Filter` objects
+          (in dictionary form),
+        - ``dictionary['order_by']`` is the list of :class:`OrderBy` objects
+          (in dictionary form),
+        - ``dictionary['group_by']`` is the list of :class:`GroupBy` objects
+          (in dictionary form),
+        - ``dictionary['limit']`` is the maximum number of matching entries to
+          return,
+        - ``dictionary['offset']`` is the number of initial entries to skip in
+          the matching result set,
+        - ``dictionary['disjunction']`` is whether the filters should be joined
+          as a disjunction or conjunction.
 
         The provided dictionary may have other key/value pairs, but they are
         ignored.
@@ -271,12 +300,15 @@ class SearchParameters(object):
         filters = [from_dict(f) for f in dictionary.get('filters', [])]
         order_by_list = dictionary.get('order_by', [])
         order_by = [OrderBy(**o) for o in order_by_list]
+        group_by_list = dictionary.get('group_by', [])
+        group_by = [GroupBy(**o) for o in group_by_list]
         limit = dictionary.get('limit')
         offset = dictionary.get('offset')
         disjunction = dictionary.get('disjunction')
         junction = OR if disjunction else AND
         return SearchParameters(filters=filters, limit=limit, offset=offset,
-                                order_by=order_by, junction=junction)
+                                order_by=order_by, group_by=group_by,
+                                junction=junction)
 
 
 class QueryBuilder(object):
@@ -402,10 +434,11 @@ class QueryBuilder(object):
         by Flask-Restless to work around a limitation in SQLAlchemy.)
 
         Building the query proceeds in this order:
-        1. filtering the query
-        2. ordering the query
-        3. limiting the query
-        4. offsetting the query
+        1. filtering
+        2. ordering
+        3. grouping
+        3. limiting
+        4. offsetting
 
         Raises one of :exc:`AttributeError`, :exc:`KeyError`, or
         :exc:`TypeError` if there is a problem creating the query. See the
@@ -442,11 +475,18 @@ class QueryBuilder(object):
                 pk_order = (getattr(model, field).asc() for field in pks)
                 query = query.order_by(*pk_order)
 
-        # Limit it
+        # Group the query.
+        if search_params.group_by:
+            for groupby in search_params.group_by:
+                field = getattr(model, groupby.field)
+                query = query.group_by(field)
+
+        # Apply limit and offset to the query.
         if search_params.limit:
             query = query.limit(search_params.limit)
         if search_params.offset:
             query = query.offset(search_params.offset)
+
         return query
 
 
