@@ -25,6 +25,7 @@ Not yet released.
 - #313, #389: :meth:`APIManager.init_app` now can be correctly used to
   initialize multiple Flask applications.
 - #327, #391: allows ordering searches by fields on related instances.
+- #353: allows search queries to specify ``group_by`` directives.
 - #365: allows preprocessors to specify return values on :http:method:`get`
   requests.
 - #385: makes the `include_methods` keywords argument respect model properties.
